<resources>

    <!--common-->
    <string name="charge_screen_save">Charging Screen</string>
    <string name="charging_on_left">Charging Left: %1$d h %2$d min</string>
    <string name="charging_use_left">%1$d h %2$d min available</string>
    <string name="unlock">Slide to unlock</string>

    <!--type one-->


    <!--type two-->
    <string name="game">Game time</string>
    <string name="talk">Calling time</string>
    <string name="internet">Surfing time</string>
    <string name="temp">TEMP</string>
    <string name="cpu">CPU</string>
    <string name="ram">RAM</string>

    <string name="battery_jiance">Charging Monitor</string>
    <string name="detect_zhuangtai">Charging status:</string>
    <string name="detect_1">Finished</string>
    <string name="detect_2">Completed</string>
    <string name="detect_3">Overcharging</string>
    <string name="detect_4">Charging time:</string>
    <string name="detect_5">Percentage:</string>
    <string name="detect_6">Power available:</string>
    <string name="detect_7">Power consumption app(s):</string>
    <string name="clean">Clean</string>
    <string name="detect_8">Check</string>

    <string name="main_status_unconnect">Not connect to WiFi</string>
    <string name="noapprun">No running apps</string>
    <string name="stop">Stop</string>
    <string name="wifi_name">Network Manager</string>

</resources>
