<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/second_shape_rectangle"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.eos.module.charge.saver.view.CustomerTypefaceTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/temp"
                android:textColor="@color/white_100"
                android:textSize="13sp"
                app:typeface="Roboto-Light.ttf" />

            <com.eos.module.charge.saver.view.CustomerTypefaceTextView
                android:id="@+id/battery_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="30℃"
                android:textColor="@color/white_100"
                android:textSize="16sp"
                app:typeface="Roboto-Light.ttf" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.eos.module.charge.saver.view.CustomerTypefaceTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/cpu"
                android:textColor="@color/white_100"
                android:textSize="13sp"
                app:typeface="Roboto-Light.ttf" />

            <com.eos.module.charge.saver.view.CustomerTypefaceTextView
                android:id="@+id/battery_cpu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="20%"
                android:textColor="@color/white_100"
                android:textSize="16sp"
                app:typeface="Roboto-Light.ttf" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.eos.module.charge.saver.view.CustomerTypefaceTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/ram"
                android:textColor="@color/white_100"
                android:textSize="13sp"
                app:typeface="Roboto-Light.ttf" />

            <com.eos.module.charge.saver.view.CustomerTypefaceTextView
                android:id="@+id/battery_ram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="70%"
                android:textColor="@color/white_100"
                android:textSize="16sp"
                app:typeface="Roboto-Light.ttf" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="6dp"
        android:background="@drawable/second_shape_rectangle"
        android:orientation="horizontal">
        <LinearLayout
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageView
                android:src="@mipmap/talk_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <View
            android:layout_gravity="center_vertical"
            android:layout_width="1dp"
            android:layout_height="19dp"
            android:background="#4B191b27"/>
        <com.eos.module.charge.saver.view.CustomerTypefaceTextView
            android:gravity="center"
            app:typeface="Roboto-Light.ttf"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/talk"
            android:textSize="14sp"
            android:textColor="@color/white_100"/>
        <View
            android:layout_gravity="center_vertical"
            android:layout_width="1dp"
            android:layout_height="19dp"
            android:background="#4B191b27"/>
        <com.eos.module.charge.saver.view.CustomerTypefaceTextView
            android:id="@+id/battery_phone_left"
            android:gravity="center"
            app:typeface="Roboto-Light.ttf"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="1h 39min left"
            android:textSize="14sp"
            android:textColor="@color/white_100"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="6dp"
        android:background="@drawable/second_shape_rectangle"
        android:orientation="horizontal">
        <LinearLayout
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageView
                android:src="@mipmap/internet_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <View
            android:layout_gravity="center_vertical"
            android:layout_width="1dp"
            android:layout_height="19dp"
            android:background="#4B191b27"/>
        <com.eos.module.charge.saver.view.CustomerTypefaceTextView
            android:gravity="center"
            app:typeface="Roboto-Light.ttf"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/internet"
            android:textSize="14sp"
            android:textColor="@color/white_100"/>
        <View
            android:layout_gravity="center_vertical"
            android:layout_width="1dp"
            android:layout_height="19dp"
            android:background="#4B191b27"/>
        <com.eos.module.charge.saver.view.CustomerTypefaceTextView
            android:id="@+id/battery_internet_left"
            android:gravity="center"
            app:typeface="Roboto-Light.ttf"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="1h 39min left"
            android:textSize="14sp"
            android:textColor="@color/white_100"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="6dp"
        android:background="@drawable/second_shape_rectangle"
        android:orientation="horizontal">
        <LinearLayout
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageView
                android:src="@mipmap/game_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <View
            android:layout_gravity="center_vertical"
            android:layout_width="1dp"
            android:layout_height="19dp"
            android:background="#4B191b27"/>
        <com.eos.module.charge.saver.view.CustomerTypefaceTextView
            android:gravity="center"
            app:typeface="Roboto-Light.ttf"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/game"
            android:textSize="14sp"
            android:textColor="@color/white_100"/>
        <View
            android:layout_gravity="center_vertical"
            android:layout_width="1dp"
            android:layout_height="19dp"
            android:background="#4B191b27"/>
        <com.eos.module.charge.saver.view.CustomerTypefaceTextView
            android:id="@+id/battery_game_left"
            android:gravity="center"
            app:typeface="Roboto-Light.ttf"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="1h 39min left"
            android:textSize="14sp"
            android:textColor="@color/white_100"/>

    </LinearLayout>

</LinearLayout>
